# dotfiles

./: .gitignore  package.json
config/: commit.md
config/ai/: AGENT.md  AGENT_KO.md  COMMIT_KO.md  PR.md  PR_KO.md
config/ai/claude/: CLAUDE-KO.md  CLAUDE-ko.md  CLAUDE.md  claude-installer  installer  installer-linux  mcp.md  settings.json
config/ai/claude/agents/: code-standards-ko.md  code-standards.md  commit-rules-ko.md  commit-rules.md  pull-request-rules-ko.md  pull-request-rules.md  review-checklist.md  security-rules-ko.md  security-rules.md
config/ai/claude/commands/: commit.md  update-docs.md
config/ai/claude/guides/: commit-rules-ko.md  commit-rules.md  security-rules-ko.md  security-rules.md  testing-rules.md
config/ai/claude/mcps/: mcps.yaml
config/ai/claude/plugins/: plugins.yaml
config/ai/claude/rules/: commit-convention-ko.md  commit-convention.md
config/ai/claude/statusline/: statusline-macos  statusline.sh  (+2 more)
config/ai/claude/tools/installer/: Cargo.toml  build.sh
config/ai/claude/tools/installer/src/: app.rs  component.rs  main.rs  mcp.rs  plugin.rs  tree.rs
config/ai/claude/tools/installer/src/fs/: installer.rs  mod.rs  scanner.rs
config/ai/claude/tools/installer/src/ui/: cli_selection.rs  diff.rs  env_input.rs  installing.rs  list.rs  mcp_list.rs  mod.rs  plugin_list.rs  project_path.rs  tabs.rs
config/bff/node_express/: .eslintrc.js  claude.md
config/fe/react(nextjs)/: .eslintrc.js  claude.md
config/git/: config
config/intellij/: plugins.md  vmoption.md
package/prettier-config/: index.cjs  package.json
(+32 files in other folders)
