[package]
name = "claude-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Filesystem
walkdir = "2.5"
dirs = "5.0"

# Diff
similar = { version = "2.6", features = ["text"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
